[package]
name = "mosguitto_server"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picovoice = "3.0.2"
actix = "0.13.1"
actix-web = "4.4.1"
async-stream = "0.3.5"
actix-web-actors = "4.2"
rand = "0.8.5"
once_cell = "1.19.0"


#[dependencies.pyo3]
#version = "0.20.0"
#features = ["auto-initialize"]

[dependencies.paho-mqtt]
version = "0.12.3"

[dependencies.chrono]
version = "0.4.31"

[dependencies.tokio]
features = ["net", "time", "macros", "rt-multi-thread"]
version = "1.21.1"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"] 
